--- a/frontend/src/pages/login.html
+++ b/frontend/src/pages/login.html
@@ -21,14 +21,16 @@
 		<h2 class="text-center text-2xl text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF] mb-4" data-i18n="signin_title">Sign In to ft_transcendence</h2>
 		
 		<div id="sign-in-username-div">
-			<label for="Sign-in-username" class="block text-white font-semibold mb-1"data-i18n="username_label">Username
+			<label for="Sign-in-username" class="block text-white font-semibold mb-1">
+				<span data-i18n="username_label">Username</span>
 				<span id="sign-in-with-email" class="underline cursor-pointer text-[#00FFFF] font-bold " data-i18n="or_email_link">or Email</span>
 			</label>
 			<input id="Sign-in-username" name="username" type="text" class="w-full p-2 rounded-lg border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none  focus:border-[#00FFFF]"/>
 		</div>
 		
 		<div id="sign-in-email-div" class="hidden">
-			<label for="Sign-in-email" class="block font-semibold mb-1 text-white" data-i18n="email_label">Email
+			<label for="Sign-in-email" class="block font-semibold mb-1 text-white">
+				<span data-i18n="email_label">Email</span>
 				<span id="sign-in-with-Username" class="underline cursor-pointer text-[#00FFFF] font-bold" data-i18n="or_username_link">or Username</span>
 			</label>
 			<input id="Sign-in-email" name="email" type="email" class="w-full p-2 rounded-lg border-2 bg-black/30 border-[#00FFFF]/30 focus:outline-none text-white  focus:border-[#00FFFF]"/>
