--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -21,7 +21,8 @@
 		<h2 class="text-2xl font-bold text-center text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] mb-4" data-i18n="signup_title">Sign Up to ft_transcendence</h2>
 		
 		<div>
-			<label for="sign-up-username"  class="block font-semibold mb-1 text-white" data-i18n="username_label">Username
+			<label for="sign-up-username"  class="block font-semibold mb-1 text-white">
+				<span data-i18n="username_label">Username</span>
 				<span class="text-red-500">*</span>
 			</label>
 			<input 
@@ -40,7 +41,8 @@
 		</div>
 
 		<div>
-			<label for="sign-up-email" class="block font-semibold mb-1 text-white" data-i18n="email_label">Email
+			<label for="sign-up-email" class="block font-semibold mb-1 text-white">
+				<span data-i18n="email_label">Email</span>
 				<span class="text-red-500">*</span>
 			</label>
 			<input id="sign-up-email" data-i18n-placeholder="email_placeholder" placeholder="your.email@exemple.com" name="email" type="email" required class="w-full p-2 rounded-lg border text-white bg-black/30 border-[#00FFFF]/30 focus:outline-none focus:border-[#00FFFF]"/>
@@ -48,7 +50,8 @@
 		</div>
 		
 		<div>
-			<label for="sign-up-password-input" class="block font-semibold mb-1 text-white" data-i18n="password_label">Password
+			<label for="sign-up-password-input" class="block font-semibold mb-1 text-white">
+				<span data-i18n="password_label">Password</span>
 				<span class="text-red-500">*</span>
 			</label>
 			<div class="flex items-center">
@@ -74,7 +77,8 @@
 		</div>
 
 		<div>
-			<label for="sign-up-confirmpassword-input"  class="block font-semibold mb-1 text-white" data-i18n="confirm_password_label">Confirm Password
+			<label for="sign-up-confirmpassword-input"  class="block font-semibold mb-1 text-white">
+				<span data-i18n="confirm_password_label">Confirm Password</span>
 				<span class="text-red-500" >*</span>
 			</label>
 			<div class="flex items-center">
