--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 	</style>
 </head>
 
-<body class="bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-color: black; background-image: url('/images/logincyberpunk.png'); background-size: 1920px 1080px;">	
+<body class="bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-color: black; background-image: url('/images/logincyberpunk.png'); background-size: cover;">
 	<script type="module" src="src/main.ts"></script>
 </body>
 </html>
