ENNNNNNFIN j'ai carrément du créé un nouveau bouton

--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -106,6 +106,8 @@
 				<div id="tournament-div" class="flex-1 flex items-center justify-between">
 					<button id="join-tournament"
 						class="bg-transparent rounded-xl ml-20 border-2 border-[#FFD700] text-[#FFD700] text-2xl font-bold py-5 px-10 hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]" data-i18n="join">JOIN</button>
+					<button id="play-tournament"
+						class="border-[#00FFFF] text-[#00FFFF] hover:bg-[#00FFFF]/20 shadow-[0_0_10px_#00FFFF] bg-transparent rounded-xl ml-20 border-2 text-2xl font-bold py-5 px-10 transition duration-200 hidden" data-i18n="play">PLAY</button>
 					<div id="tournament-view" class="flex flex-col items-center justify-center w-[600px] -mt-4">
 						<div id="default-tournament-view" class="flex flex-col items-center gap-4">
 							<img src="/images/pong_racquet.png" alt="pong racquet" class="w-16 h-16 mb-2" />
