--- a/frontend/src/pages/localgame.html
+++ b/frontend/src/pages/localgame.html
@@ -1,6 +1,6 @@
 <div class="relative w-screen h-screen">
 	<div class="absolute top-4 right-4">
-		<a href="/home" data-link class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
+		<a id="home-button" data-link class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
 			<span class="text-[#FFD700] font-bold text-lg" data-i18n="home">HOME</span>
 		</a>
 	</div>
