--- a/frontend/src/pages/2fa.html
+++ b/frontend/src/pages/2fa.html
@@ -17,13 +17,13 @@
 		</div>
 	</div>
 
-	<form id="a2f" action="" method="POST" class="space-y-4 max-w-md w-full border-4 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur pt-16 p-6 rounded-2xl">
-		<h2 class="text-center text-2xl text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF] mb-4" data-i18n="a2f_title">Two-factor authentication</h2>
+	<form id="2fa" action="" method="POST" class="space-y-4 max-w-md w-full border-4 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur pt-16 p-6 rounded-2xl">
+		<h2 class="text-center text-2xl text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF] mb-4" data-i18n="2fa_title">Two-factor authentication</h2>
 		<div id="code-div">
 			<label for="code-input" class="block text-white font-semibold mb-1" data-i18n="code_label">Code</label>
 			<input id="code-input" type="text" data-i18n-placeholder="code_placeholder" placeholder="enter code here" class="w-full p-2 rounded-lg border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none focus:border-[#00FFFF]"/>
 		</div>
-		<button type="button" id="to-send-a2f" class="w-full bg-transparent px-4 py-2 border-2 border-[#00FFFF] rounded-lg text-[#00FFFF] font-bold  hover:bg-[#0f9292]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]" data-i18n="send_code_button">Send me the code !</button>
-		<button type="submit" id="to-click-a2f" class="w-full bg-transparent px-4 py-2 border-2 border-[#00FFFF] rounded-lg text-[#00FFFF] font-bold  hover:bg-[#0f9292]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]" data-i18n="connect_button">Connexion</button>
+		<button type="button" id="to-send-2fa" class="w-full bg-transparent px-4 py-2 border-2 border-[#00FFFF] rounded-lg text-[#00FFFF] font-bold  hover:bg-[#0f9292]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]" data-i18n="send_code_button">Send me the code !</button>
+		<button type="submit" id="to-click-2fa" class="w-full bg-transparent px-4 py-2 border-2 border-[#00FFFF] rounded-lg text-[#00FFFF] font-bold  hover:bg-[#0f9292]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]" data-i18n="connect_button">Connexion</button>
 	</form>
 </div>
