--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -8,7 +8,7 @@
 
 		<div class="relative">
 			<button id="switch-chat"
-				class="group text-[#ad39f0] opacity-40 z-10 font-bold flex items-center hover:text-[#FF2E9F] hover:opacity-100 transition-colors duration-200">
+				class="group text-[#ad39f0] border-2 rounded-2xl border-[#ad39f0] opacity-60 p-2 z-10 font-bold flex items-center hover:border-[#FF2E9F] hover:text-[#FF2E9F] hover:opacity-100 transition-colors duration-200">
 				<span data-i18n="chat_friends">CHAT://friends</span>
 				<div id="tooltip-switch-chat" data-i18n="switch_to_friends" class="absolute -top-8 left-1/2 -translate-x-1/2 bg-black/80 text-[#FF2E9F] text-xs px-2 py-1 rounded
 					opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap
