--- a/frontend/src/pages/overall_statistics.html
+++ b/frontend/src/pages/overall_statistics.html
@@ -65,14 +65,19 @@
 
 				<div class="flex w-full space-x-24 items-start">
 
-					<div class="flex flex-col items-center justify-center mx-10 bg-black/30 h-40 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-						<div class="text-5xl text-[#00FFFF] text-center font-semibold" data-i18n="GAME_P" >GAMES PLAYED</div>
+					<div class="flex flex-col items-center justify-center mx-10 bg-black/30 h-60 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
+						<div class="text-4xl text-[#00FFFF] text-center font-semibold" data-i18n="GAME_P" >GAMES PLAYED</div>
 						<div id="game_played" class="text-5xl text-[#FFD700] text-center font-bold"></div>
 					</div>
 
-					<div class="flex flex-col items-center justify-center bg-black/30 h-40 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-						<div class="text-5xl text-[#00FFFF] text-center font-semibold" data-i18n="POINTS_E" >POINTS EARNED</div>
+					<div class="flex flex-col items-center justify-center bg-black/30 h-60 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
+						<div class="text-4xl text-[#00FFFF] text-center font-semibold" data-i18n="POINTS_E" >POINTS EARNED</div>
 						<div id="point_earned" class="text-5xl text-[#FFD700] text-center font-bold"></div>
+					</div>
+
+					<div class="flex flex-col items-center justify-center bg-black/30 h-60 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
+						<div class="text-4xl text-[#00FFFF] text-center font-semibold" data-i18n="points_t" >AVG POINTS</div>
+						<div id="avg_point" class="text-5xl text-[#FFD700] text-center font-bold"></div>
 					</div>
 
 					<div class="flex items-center justify-center w-2/4 h-80 rounded-2xl bg-black/30 border-2 border-[#00FFFF] space-x-5 shadow-[0_0_10px_#00FFFF]">
@@ -90,8 +95,9 @@
 						<canvas id="graph-win-lose" class="w-48 h-48 rounded-full"></canvas>
 					</div>
 				</div>
+
 				<div class="w-full h-[300px] bg-black/30 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] p-4 mt-6">
-					<div class="w-2/3 h-full">
+					<div class="w-full h-full">
 						<canvas id="graph-history-trend" class="w-full h-full"></canvas>
 					</div>
 				</div>
