--- a/frontend/src/pages/tournament_statistics.html
+++ b/frontend/src/pages/tournament_statistics.html
@@ -86,7 +86,7 @@
 					</div>
 				</div>
 				<div class="w-full h-[300px] bg-black/30 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] p-4 mt-6">
-					<div class="w-2/3 h-full">
+					<div class="w-full h-full">
 						<canvas id="graph-history-trend" class="w-full h-full"></canvas>
 					</div>
 				</div>
